--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-pro",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lizaklimova.github.io/task-pro/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
