added i18next deps

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
