--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
