--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
     "react-hot-toast": "^2.4.1",
