--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
