--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
