--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
